Fixing image overflow in profile page, fixes margin in <main>, added color to correspond with offer percentages

--- a/app/assets/stylesheets/business.css
+++ b/app/assets/stylesheets/business.css
@@ -12,7 +12,7 @@
 #header_focus_image {
 	width: 250px;
 	height: 250px;
-
+	overflow: hidden;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -23,6 +23,11 @@
 
 	position: relative;
 	top: 10px;
+}
+
+#header_focus_image img {
+
+	height:  100%;
 }
 
 #header_back_image {
