--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -23,6 +23,10 @@ header {
 	border-bottom: none;
 }
 
+body {
+	margin:0;
+}
+
 #logo {
 	position: fixed;
 	left: 0px;
@@ -123,12 +127,13 @@ header {
 	background-color: #A3A3A3;
 	color: white;
 	border-left-color: green;
+
+	cursor: pointer;
 }
 
 main {
 	margin-left: 250px;
 	margin-top: 75px;
-	padding: 0;
 }
 
 #sign_in {
