--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -1,3 +1,4 @@
+
 h1 {
 	color: black;
 }
@@ -129,7 +130,7 @@ pre {
 	margin: 0;
 	width: 0;
 	height: 0;
-	border-top: 100px solid green;
+	border-top: 100px solid;
 	border-right: 100px solid transparent;
 
 
